# PaddleSpeech

./: .bashrc  .clang-format  .clang_format.hook  .flake8  .gitconfig  .gitignore  .mergify.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .vimrc  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.md  README_cn.md  alphabet.py  audio_data_utils.py  augmentation.config  compute_mean_std.py  ctc_beam_search_decoder.py  decoder.py  demo_client.py  demo_server.py  deploy.py  env.sh  error_rate.py  evaluate.py  infer.py  layer.py  librispeech.py  model.py  network_test.py  pcloud_split_data.py  pcloud_submit.sh  pcloud_train.sh  requirements.sh  requirements.txt  scorer.py  setup.cfg  (+11 more)
audio/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  requirements.txt  setup.py
audio/cmake/: FindGFortranLibs.cmake  pybind.cmake  summary.cmake
audio/docs/: README.md
audio/examples/panns/: audio_tag.py  parse_result.py
audio/examples/sound_classification/: README.md  export_model.py  predict.py  train.py
audio/kaldi_frontend/: CMakeLists.txt  feature_common.h  kaldi_feature.cc  kaldi_feature.h
audio/paddleaudio/: CMakeLists.txt  __init__.py  _extension.py  _ops.py
audio/paddleaudio/_internal/: module_utils.py
audio/paddleaudio/backends/: __init__.py  common.py  soundfile_backend.py  sox_io_backend.py  utils.py
audio/paddleaudio/compliance/: kaldi.py  librosa.py
audio/paddleaudio/csrc/: CMakeLists.txt
audio/paddleaudio/datasets/: dataset.py  dcase.py  esc50.py  gtzan.py  hey_snips.py  librispeech.py  rirs_noises.py  tess.py  urban_sound.py  voxceleb.py
audio/paddleaudio/features/: __init__.py  core.py  layers.py
audio/paddleaudio/functional/: functional.py  window.py
audio/paddleaudio/kaldi/: __init__.py  kaldi.py
audio/paddleaudio/lib/: libgcc_s.1.1.dylib
audio/paddleaudio/metric/: __init__.py
audio/paddleaudio/sox_effects/: __init__.py  sox_effects.py
audio/paddleaudio/src/: CMakeLists.txt  utils.cpp
audio/paddleaudio/utils/: __init__.py  download.py  env.py  log.py  sox_utils.py  tensor_utils.py  time.py
audio/test/unit_test/: test_features.py
audio/tests/backends/: common.py
audio/tests/benchmark/: log_melspectrogram.py  melspectrogram.py  mfcc.py
audio/tests/common_utils/: __init__.py  case_utils.py  data_utils.py  parameterized_utils.py  sox_utils.py  wav_utils.py
audio/tests/features/: base.py  test_istft.py  test_kaldi.py  test_kaldi_feat.py  test_librosa.py  test_log_melspectrogram.py  test_spectrogram.py  test_stft.py
audio/tools/setup_helpers/: __init__.py  extension.py
demos/TTSArmLinux/src/: CMakeLists.txt  Predictor.hpp  TTSCppFrontend  main.cc  third-party
demos/TTSCppFrontend/: .gitignore  CMakeLists.txt  README.md  build-depends.sh  build.sh  clean.sh  download.sh  run_front_demo.sh
demos/TTSCppFrontend/front_demo/: front.conf  front_demo.cpp
paddlespeech/audio/: .gitignore  CMakeLists.txt  README.md  __init__.py  _class.py  _extension.py  _ops.py
paddlespeech/audio/_internal/: module_utils.py
paddlespeech/audio/backends/: __init__.py  no_backend.py  soundfile_backend.py  sox_io_backend.py  utils.py
paddlespeech/audio/compliance/: kaldi.py  librosa.py
paddlespeech/audio/csrc/: CMakeLists.txt
paddlespeech/audio/datasets/: dataset.py  rirs_noises.py  voxceleb.py
paddlespeech/audio/kaldi/: __init__.py  kaldi.py
paddlespeech/audio/metric/: __init__.py
paddlespeech/audio/sox_effects/: __init__.py  sox_effects.py
paddlespeech/audio/src/: CMakeLists.txt  utils.cpp
paddlespeech/audio/stream_data/: __init__.py  cache.py  compat.py  filters.py  pipeline.py  shardlists.py  tariterators.py
paddlespeech/audio/streamdata/: __init__.py  autodecode.py  cache.py  compat.py  extradatasets.py  filters.py  gopen.py  handlers.py  mix.py  paddle_utils.py  pipeline.py  shardlists.py  tariterators.py  utils.py  writer.py
paddlespeech/audio/text/: text_featurizer.py  utility.py
paddlespeech/audio/transform/: add_deltas.py  channel_selector.py  cmvn.py  functional.py  perturb.py  spec_augment.py  spectrogram.py  transform_interface.py  transformation.py  wpe.py
paddlespeech/audio/utils/: __init__.py  check_kwargs.py  dynamic_import.py  log.py  numeric.py  sox_utils.py  tensor_utils.py
runtime/: .gitignore  CMakeLists.txt  README.md  build.sh  build_android.sh  build_ios.sh
runtime/cmake/: EnableCMP0077.cmake  FindGFortranLibs.cmake  fastdeploy.cmake  gflags.cmake  glog.cmake  gtest.cmake  onnx.cmake  openblas.cmake  openfst.cmake  paddleinference.cmake  summary.cmake  system.cmake
runtime/engine/: CMakeLists.txt
runtime/engine/cls/: CMakeLists.txt
runtime/engine/codelab/: CMakeLists.txt
runtime/engine/common/: CMakeLists.txt
runtime/engine/kaldi/: CMakeLists.txt
runtime/engine/vad/: CMakeLists.txt  README.md  silero_vad_main.cc  vad.cc  vad.h  wav.h
runtime/examples/: .gitignore  README.md
runtime/examples/audio_classification/: README.md  conf  label_list  scp
runtime/examples/codelab/: README.md
runtime/examples/custom_asr/: path.sh
runtime/examples/silero_vad/: README_CN.md  path.sh  run.sh
runtime/examples/text_lm/: path.sh
runtime/examples/vad/: README.md  path.sh  run.sh
runtime/tools/: setup_valgrind.sh  venv.sh
speechnn/: CMakeLists.txt
speechnn/cmake/: third_party.cmake
speechnn/core/transformers/: README.md
speechnn/speechnn/decoder/: CMakeLists.txt
speechx/: .gitignore  CMakeLists.txt  README.md  TODO.md  build.sh  requirement.txt
speechx/cmake/: EnableCMP0048.cmake  eigen.cmake  gflags.cmake  glog.cmake  gtest.cmake  openblas.cmake  openfst.cmake  paddleinference.cmake
speechx/examples/: .gitignore  CMakeLists.txt  README.md  path.sh  run.sh
speechx/examples/aishell/: mkgraph.sh  recognizer_test_main.cc  run.sh
speechx/examples/build_wfst/: path.sh  run.sh
speechx/examples/codelab/: README.md
speechx/examples/custom_asr/: README.md  path.sh  run.sh
speechx/examples/decoder/: CMakeLists.txt  path.sh  run.sh  (+7 more)
speechx/patch/: README.md
speechx/speechx/: CMakeLists.txt
speechx/tools/: clang-format.sh  setup_valgrind.sh
(+5440 files in other folders)
